Migrate methods from basejump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,21 +4,46 @@ export(antiJoin)
 export(fullJoin)
 export(innerJoin)
 export(leftJoin)
+export(melt)
+export(mutateAll)
+export(mutateAt)
+export(mutateIf)
 export(rightJoin)
+export(selectIf)
 export(semiJoin)
+export(splitByLevel)
+export(transmuteAt)
+export(transmuteIf)
 exportMethods(antiJoin)
 exportMethods(fullJoin)
 exportMethods(innerJoin)
 exportMethods(leftJoin)
+exportMethods(melt)
+exportMethods(mutateAll)
+exportMethods(mutateAt)
+exportMethods(mutateIf)
 exportMethods(rightJoin)
+exportMethods(selectIf)
 exportMethods(semiJoin)
+exportMethods(splitByLevel)
+exportMethods(transmuteAt)
+exportMethods(transmuteIf)
 importClassesFrom(S4Vectors,DataFrame)
+importFrom(AcidBase,appendToBody)
 importFrom(AcidGenerics,antiJoin)
 importFrom(AcidGenerics,fullJoin)
 importFrom(AcidGenerics,innerJoin)
 importFrom(AcidGenerics,leftJoin)
+importFrom(AcidGenerics,melt)
+importFrom(AcidGenerics,mutateAll)
+importFrom(AcidGenerics,mutateAt)
+importFrom(AcidGenerics,mutateIf)
 importFrom(AcidGenerics,rightJoin)
+importFrom(AcidGenerics,selectIf)
 importFrom(AcidGenerics,semiJoin)
+importFrom(AcidGenerics,splitByLevel)
+importFrom(AcidGenerics,transmuteAt)
+importFrom(AcidGenerics,transmuteIf)
 importFrom(S4Vectors,merge)
 importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,order)
