--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: AcidPlyr
 Title: A Grammar of S4 Class Data Manipulation
 Description: A dplyr-like approach for classes defined in S4Vectors.
-Version: 0.1.0
-Date: 2020-10-06
+Version: 0.1.1
+Date: 2020-10-07
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -22,6 +22,7 @@ License: GPL-3
 Encoding: UTF-8
 Depends: R (>= 4.0)
 Imports:
+    AcidBase (>= 0.2.0),
     AcidGenerics (>= 0.4.0),
     S4Vectors,
     goalie (>= 0.4.9),
@@ -31,10 +32,6 @@ Suggests:
     knitr,
     rmarkdown,
     testthat
-Remotes:
-    acidgenomics/AcidGenerics,
-    acidgenomics/AcidTest,
-    acidgenomics/goalie
 biocViews:
     DataImport,
     DataRepresentation
