Simplify melt methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ importFrom(AcidGenerics,semiJoin)
 importFrom(AcidGenerics,splitByLevel)
 importFrom(AcidGenerics,transmuteAt)
 importFrom(AcidGenerics,transmuteIf)
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,decode)
 importFrom(S4Vectors,merge)
 importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,order)
@@ -51,8 +53,13 @@ importFrom(S4Vectors,setdiff)
 importFrom(S4Vectors,unique)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
+importFrom(goalie,hasColnames)
+importFrom(goalie,hasDims)
 importFrom(goalie,hasLength)
 importFrom(goalie,hasRownames)
+importFrom(goalie,isAny)
+importFrom(goalie,isCharacter)
+importFrom(goalie,isNumber)
 importFrom(goalie,isSubset)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
