Simplify NAMESPACE requirements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,order)
 importFrom(S4Vectors,setdiff)
 importFrom(S4Vectors,unique)
+importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
 importFrom(goalie,hasColnames)
