--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,13 +54,16 @@ importFrom(S4Vectors,unique)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
+importFrom(goalie,bapply)
 importFrom(goalie,hasColnames)
 importFrom(goalie,hasDims)
 importFrom(goalie,hasLength)
 importFrom(goalie,hasRownames)
 importFrom(goalie,isAny)
 importFrom(goalie,isCharacter)
+importFrom(goalie,isFlag)
 importFrom(goalie,isNumber)
+importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
