--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,8 @@ importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,order)
 importFrom(S4Vectors,setdiff)
 importFrom(S4Vectors,unique)
+importFrom(cli,cli_alert)
+importFrom(cli,cli_alert_info)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
@@ -62,6 +64,7 @@ importFrom(goalie,hasRownames)
 importFrom(goalie,isAny)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFlag)
+importFrom(goalie,isInt)
 importFrom(goalie,isNumber)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
