Revert to using as_tibble coercion internally to handle list columns better

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,3 +71,4 @@ importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
+importFrom(tibble,as_tibble)
