--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AcidPlyr
 Title: A Grammar of S4 Class Data Manipulation
 Description: A dplyr-like approach for classes defined in S4Vectors.
-Version: 0.1.3
+Version: 0.1.4
 Date: 2020-10-12
 Authors@R: c(
     person(
@@ -27,6 +27,7 @@ Imports:
     S4Vectors,
     cli (>= 2.0),
     goalie (>= 0.4.9),
+    tibble (>= 3.0),
     methods
 Suggests:
     AcidTest (>= 0.4.0),
