--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,26 +32,26 @@ exportMethods(transmuteIf)
 importClassesFrom(S4Vectors,DataFrame)
 importFrom(AcidBase,appendToBody)
 importFrom(AcidGenerics,antiJoin)
+importFrom(AcidGenerics,decode)
 importFrom(AcidGenerics,fullJoin)
 importFrom(AcidGenerics,innerJoin)
 importFrom(AcidGenerics,leftJoin)
 importFrom(AcidGenerics,melt)
+importFrom(AcidGenerics,merge)
 importFrom(AcidGenerics,mutateAll)
 importFrom(AcidGenerics,mutateAt)
 importFrom(AcidGenerics,mutateIf)
+importFrom(AcidGenerics,na.omit)
+importFrom(AcidGenerics,order)
 importFrom(AcidGenerics,rightJoin)
 importFrom(AcidGenerics,selectIf)
 importFrom(AcidGenerics,semiJoin)
+importFrom(AcidGenerics,setdiff)
 importFrom(AcidGenerics,splitByLevel)
 importFrom(AcidGenerics,transmuteAt)
 importFrom(AcidGenerics,transmuteIf)
+importFrom(AcidGenerics,unique)
 importFrom(S4Vectors,DataFrame)
-importFrom(S4Vectors,decode)
-importFrom(S4Vectors,merge)
-importFrom(S4Vectors,na.omit)
-importFrom(S4Vectors,order)
-importFrom(S4Vectors,setdiff)
-importFrom(S4Vectors,unique)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_info)
 importFrom(goalie,allAreAtomic)
