--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(semiJoin)
 export(splitByLevel)
 export(transmuteAt)
 export(transmuteIf)
+export(unlistToDataFrame)
 exportMethods(antiJoin)
 exportMethods(fullJoin)
 exportMethods(innerJoin)
@@ -29,6 +30,7 @@ exportMethods(semiJoin)
 exportMethods(splitByLevel)
 exportMethods(transmuteAt)
 exportMethods(transmuteIf)
+exportMethods(unlistToDataFrame)
 importClassesFrom(S4Vectors,DataFrame)
 importFrom(AcidBase,appendToBody)
 importFrom(AcidGenerics,antiJoin)
@@ -51,6 +53,7 @@ importFrom(AcidGenerics,splitByLevel)
 importFrom(AcidGenerics,transmuteAt)
 importFrom(AcidGenerics,transmuteIf)
 importFrom(AcidGenerics,unique)
+importFrom(AcidGenerics,unlistToDataFrame)
 importFrom(S4Vectors,DataFrame)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_info)
@@ -71,4 +74,5 @@ importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
+importFrom(purrr,map_dfr)
 importFrom(tibble,as_tibble)
