--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ importFrom(goalie,isInt)
 importFrom(goalie,isNumber)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
+importFrom(methods,as)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
 importFrom(purrr,map_dfr)
