--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AcidPlyr
 Title: A Grammar of S4 Class Data Manipulation
 Description: A dplyr-like approach for classes defined in S4Vectors.
-Version: 0.1.5
+Version: 0.1.6
 Date: 2021-01-06
 Authors@R: c(
     person(
@@ -22,22 +22,19 @@ License: GPL-3
 Encoding: UTF-8
 Depends: R (>= 4.0)
 Imports:
-    AcidBase (>= 0.2.6),
+    AcidBase (>= 0.3.1),
+    AcidCLI (>= 0.0.1),
     AcidGenerics (>= 0.5.0),
     S4Vectors,
-    cli (>= 2.2),
-    goalie (>= 0.4.11),
-    purrr (>= 0.3.4),
+    goalie (>= 0.4.13),
+    purrr (>= 0.3),
     tibble (>= 3.0),
     methods
 Suggests:
-    AcidTest (>= 0.4.0),
+    AcidTest,
     knitr,
     rmarkdown,
     testthat
-biocViews:
-    DataImport,
-    DataRepresentation
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
