--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ exportMethods(transmuteIf)
 exportMethods(unlistToDataFrame)
 importClassesFrom(S4Vectors,DataFrame)
 importFrom(AcidBase,appendToBody)
+importFrom(AcidCLI,alert)
+importFrom(AcidCLI,alertInfo)
 importFrom(AcidGenerics,antiJoin)
 importFrom(AcidGenerics,decode)
 importFrom(AcidGenerics,fullJoin)
@@ -55,8 +57,6 @@ importFrom(AcidGenerics,transmuteIf)
 importFrom(AcidGenerics,unique)
 importFrom(AcidGenerics,unlistToDataFrame)
 importFrom(S4Vectors,DataFrame)
-importFrom(cli,cli_alert)
-importFrom(cli,cli_alert_info)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
