--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(goalie,bapply)
 importFrom(goalie,hasColnames)
 importFrom(goalie,hasDims)
 importFrom(goalie,hasLength)
+importFrom(goalie,hasNoDuplicates)
 importFrom(goalie,hasRownames)
 importFrom(goalie,isAny)
 importFrom(goalie,isCharacter)
