Migrate collapseToString from basejump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(DataFrame)
 export(antiJoin)
+export(collapseToString)
 export(fullJoin)
 export(innerJoin)
 export(leftJoin)
@@ -17,6 +18,7 @@ export(transmuteAt)
 export(transmuteIf)
 export(unlistToDataFrame)
 exportMethods(antiJoin)
+exportMethods(collapseToString)
 exportMethods(fullJoin)
 exportMethods(innerJoin)
 exportMethods(leftJoin)
@@ -36,6 +38,7 @@ importFrom(AcidBase,appendToBody)
 importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
 importFrom(AcidGenerics,antiJoin)
+importFrom(AcidGenerics,collapseToString)
 importFrom(AcidGenerics,decode)
 importFrom(AcidGenerics,fullJoin)
 importFrom(AcidGenerics,innerJoin)
