Don't use sanitizeNA or removeNA here, keep it light

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ importFrom(goalie,isCharacter)
 importFrom(goalie,isFlag)
 importFrom(goalie,isInt)
 importFrom(goalie,isNumber)
+importFrom(goalie,isScalar)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(methods,as)
