--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,10 +33,11 @@ exportMethods(splitByLevel)
 exportMethods(transmuteAt)
 exportMethods(transmuteIf)
 exportMethods(unlistToDataFrame)
-importClassesFrom(S4Vectors,DataFrame)
+importClassesFrom(AcidGenerics,DataFrame)
 importFrom(AcidBase,appendToBody)
 importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
+importFrom(AcidGenerics,DataFrame)
 importFrom(AcidGenerics,antiJoin)
 importFrom(AcidGenerics,collapseToString)
 importFrom(AcidGenerics,decode)
