--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,6 @@
 Package: AcidPlyr
 Title: Acid Genomics Tabular Data Plyr
-Description: A dplyr-like grammar for data manipulation of S4 classes
-    defined in S4Vectors.
+Description: A dplyr-like grammar for data manipulation of S4 classes.
 Version: 0.1.9
 Date: 2021-02-11
 Authors@R: c(
