--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(collapseToString)
 export(fullJoin)
 export(innerJoin)
 export(leftJoin)
+export(map_df)
+export(map_dfr)
 export(melt)
 export(mutateAll)
 export(mutateAt)
@@ -80,5 +82,6 @@ importFrom(goalie,isSubset)
 importFrom(methods,as)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
+importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(tibble,as_tibble)
