Attempt to improve leftJoin method, preventing coercion in left side of object when necessary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
 importFrom(AcidGenerics,DataFrame)
 importFrom(AcidGenerics,antiJoin)
+importFrom(AcidGenerics,as.data.frame)
 importFrom(AcidGenerics,collapseToString)
 importFrom(AcidGenerics,decode)
 importFrom(AcidGenerics,fullJoin)
