--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ importFrom(goalie,isScalar)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(methods,as)
+importFrom(methods,is)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
 importFrom(purrr,map_df)
