--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ URL:
     https://r.acidgenomics.com/packages/acidplyr/,
     https://github.com/acidgenomics/r-acidplyr/
 BugReports: https://github.com/acidgenomics/r-acidplyr/issues/
-License: GPL-3
+License: AGPL-3
 Encoding: UTF-8
 Depends: R (>= 4.0)
 Imports:
