Add recursive mode option to `unlistToDataFrame`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ importFrom(AcidGenerics,mutateAt)
 importFrom(AcidGenerics,mutateIf)
 importFrom(AcidGenerics,na.omit)
 importFrom(AcidGenerics,order)
+importFrom(AcidGenerics,rbind)
 importFrom(AcidGenerics,rightJoin)
 importFrom(AcidGenerics,selectIf)
 importFrom(AcidGenerics,semiJoin)
