--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(AcidBase,appendToBody)
 importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
 importFrom(AcidGenerics,DataFrame)
+importFrom(AcidGenerics,SimpleList)
 importFrom(AcidGenerics,antiJoin)
 importFrom(AcidGenerics,as.data.frame)
 importFrom(AcidGenerics,collapseToString)
