--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ exportMethods(splitByLevel)
 exportMethods(transmuteAt)
 exportMethods(transmuteIf)
 exportMethods(unlistToDataFrame)
+importClassesFrom(AcidGenerics,AsIs)
 importClassesFrom(AcidGenerics,DataFrame)
 importFrom(AcidBase,appendToBody)
 importFrom(AcidCLI,alert)
@@ -72,6 +73,7 @@ importFrom(goalie,bapply)
 importFrom(goalie,hasColnames)
 importFrom(goalie,hasDims)
 importFrom(goalie,hasLength)
+importFrom(goalie,hasNames)
 importFrom(goalie,hasNoDuplicates)
 importFrom(goalie,hasRownames)
 importFrom(goalie,isAny)
