--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ importFrom(goalie,isFlag)
 importFrom(goalie,isInt)
 importFrom(goalie,isNumber)
 importFrom(goalie,isScalar)
+importFrom(goalie,isScalarAtomic)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(methods,as)
