--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,14 @@ export(collapseToString)
 export(fullJoin)
 export(innerJoin)
 export(leftJoin)
+export(mapToDataFrame)
 export(map_df)
 export(map_dfr)
 export(melt)
 export(mutateAll)
 export(mutateAt)
 export(mutateIf)
+export(rbindToDataFrame)
 export(rightJoin)
 export(selectIf)
 export(semiJoin)
@@ -24,10 +26,12 @@ exportMethods(collapseToString)
 exportMethods(fullJoin)
 exportMethods(innerJoin)
 exportMethods(leftJoin)
+exportMethods(mapToDataFrame)
 exportMethods(melt)
 exportMethods(mutateAll)
 exportMethods(mutateAt)
 exportMethods(mutateIf)
+exportMethods(rbindToDataFrame)
 exportMethods(rightJoin)
 exportMethods(selectIf)
 exportMethods(semiJoin)
@@ -49,6 +53,7 @@ importFrom(AcidGenerics,decode)
 importFrom(AcidGenerics,fullJoin)
 importFrom(AcidGenerics,innerJoin)
 importFrom(AcidGenerics,leftJoin)
+importFrom(AcidGenerics,mapToDataFrame)
 importFrom(AcidGenerics,melt)
 importFrom(AcidGenerics,merge)
 importFrom(AcidGenerics,mutateAll)
@@ -57,6 +62,7 @@ importFrom(AcidGenerics,mutateIf)
 importFrom(AcidGenerics,na.omit)
 importFrom(AcidGenerics,order)
 importFrom(AcidGenerics,rbind)
+importFrom(AcidGenerics,rbindToDataFrame)
 importFrom(AcidGenerics,rightJoin)
 importFrom(AcidGenerics,selectIf)
 importFrom(AcidGenerics,semiJoin)
