--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,10 +48,14 @@ importFrom(AcidGenerics,DataFrame)
 importFrom(AcidGenerics,SimpleList)
 importFrom(AcidGenerics,antiJoin)
 importFrom(AcidGenerics,as.data.frame)
+importFrom(AcidGenerics,cbind)
 importFrom(AcidGenerics,collapseToString)
 importFrom(AcidGenerics,decode)
+importFrom(AcidGenerics,do.call)
+importFrom(AcidGenerics,expand.grid)
 importFrom(AcidGenerics,fullJoin)
 importFrom(AcidGenerics,innerJoin)
+importFrom(AcidGenerics,lapply)
 importFrom(AcidGenerics,leftJoin)
 importFrom(AcidGenerics,mapToDataFrame)
 importFrom(AcidGenerics,melt)
@@ -64,6 +68,7 @@ importFrom(AcidGenerics,order)
 importFrom(AcidGenerics,rbind)
 importFrom(AcidGenerics,rbindToDataFrame)
 importFrom(AcidGenerics,rightJoin)
+importFrom(AcidGenerics,rowSums)
 importFrom(AcidGenerics,selectIf)
 importFrom(AcidGenerics,semiJoin)
 importFrom(AcidGenerics,setdiff)
