Attempt to remove dependency on tibble coercion method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importClassesFrom(AcidGenerics,AsIs)
 importClassesFrom(AcidGenerics,DataFrame)
 importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
+importFrom(AcidGenerics,"metadata<-")
 importFrom(AcidGenerics,DataFrame)
 importFrom(AcidGenerics,SimpleList)
 importFrom(AcidGenerics,antiJoin)
@@ -59,6 +60,7 @@ importFrom(AcidGenerics,leftJoin)
 importFrom(AcidGenerics,mapToDataFrame)
 importFrom(AcidGenerics,melt)
 importFrom(AcidGenerics,merge)
+importFrom(AcidGenerics,metadata)
 importFrom(AcidGenerics,mutateAll)
 importFrom(AcidGenerics,mutateAt)
 importFrom(AcidGenerics,mutateIf)
@@ -101,4 +103,3 @@ importFrom(methods,setMethod)
 importFrom(methods,signature)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
-importFrom(tibble,as_tibble)
