--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidPlyr
 Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
   classes, such as DataFrame.
-Version: 0.1.14
-Date: 2021-02-24
+Version: 0.1.15
+Date: 2021-03-02
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -23,12 +23,11 @@ License: AGPL-3
 Encoding: UTF-8
 Depends: R (>= 4.0)
 Imports:
-    AcidCLI (>= 0.0.6),
+    AcidCLI (>= 0.1.0),
     AcidGenerics (>= 0.5.16),
     goalie (>= 0.5.0),
     methods,
-    purrr (>= 0.3.4),
-    tibble (>= 3.0.6)
+    purrr (>= 0.3.4)
 Suggests:
     AcidTest (>= 0.4.3),
     testthat
