--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidPlyr
 Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
   classes, such as DataFrame.
-Version: 0.1.17
-Date: 2021-03-10
+Version: 0.1.18
+Date: 2021-04-27
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -26,10 +26,10 @@ Imports:
     AcidCLI (>= 0.1.0),
     AcidGenerics (>= 0.5.17),
     goalie (>= 0.5.0),
-    methods,
-    purrr (>= 0.3.4)
+    methods
 Suggests:
     AcidTest (>= 0.4.3),
+    purrr (>= 0.3.4),
     testthat
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
