Need to include requireNamespaces

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ exportMethods(transmuteIf)
 exportMethods(unlistToDataFrame)
 importClassesFrom(AcidGenerics,AsIs)
 importClassesFrom(AcidGenerics,DataFrame)
+importFrom(AcidBase,requireNamespaces)
 importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
 importFrom(AcidGenerics,"metadata<-")
