--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ License: AGPL-3
 Encoding: UTF-8
 Depends: R (>= 4.0)
 Imports:
+    AcidBase (>= 0.3.13),
     AcidCLI (>= 0.1.0),
     AcidGenerics (>= 0.5.17),
     goalie (>= 0.5.0),
