--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidPlyr
 Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
   classes, such as DataFrame.
-Version: 0.1.18
-Date: 2021-04-27
+Version: 0.1.19
+Date: 2021-05-18
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -30,6 +30,7 @@ Imports:
     methods
 Suggests:
     AcidTest (>= 0.4.3),
+    dplyr (>= 1.0.6),
     purrr (>= 0.3.4),
     testthat
 Roxygen: list(markdown = TRUE)
