Need to provide coercion fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,3 +100,4 @@ importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
+importFrom(pipette,as.DataFrame)
