--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: AcidPlyr
 Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
   classes, such as DataFrame.
-Version: 0.1.19
+Version: 0.1.20
 Date: 2021-05-18
 Authors@R: c(
     person(
@@ -24,10 +24,11 @@ Encoding: UTF-8
 Depends: R (>= 4.0)
 Imports:
     AcidBase (>= 0.3.13),
-    AcidCLI (>= 0.1.0),
+    AcidCLI (>= 0.1.1),
     AcidGenerics (>= 0.5.17),
     goalie (>= 0.5.0),
-    methods
+    methods,
+    pipette (>= 0.5.17)
 Suggests:
     AcidTest (>= 0.4.3),
     dplyr (>= 1.0.6),
