Need to import abort function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ exportMethods(unlistToDataFrame)
 importClassesFrom(AcidGenerics,AsIs)
 importClassesFrom(AcidGenerics,DataFrame)
 importFrom(AcidBase,requireNamespaces)
+importFrom(AcidCLI,abort)
 importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
 importFrom(AcidGenerics,"metadata<-")
