Harden package to dispatch on DFrame instead of DataFrame virtual class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,4 +97,4 @@ importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
-importFrom(pipette,as.DataFrame)
+importFrom(pipette,as.DFrame)
