Harden against DFrame class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ exportMethods(splitByLevel)
 exportMethods(transmuteAt)
 exportMethods(transmuteIf)
 importClassesFrom(AcidGenerics,AsIs)
-importClassesFrom(AcidGenerics,DataFrame)
+importClassesFrom(AcidGenerics,DFrame)
 importFrom(AcidBase,requireNamespaces)
 importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
