--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AcidPlyr
 Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
-  classes, such as DataFrame.
+  classes, such as DFrame.
 Version: 0.1.23.9000
 Date: 2021-10-14
 Authors@R: c(
