--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ exportMethods(splitByLevel)
 exportMethods(transmuteAt)
 exportMethods(transmuteIf)
 importClassesFrom(AcidGenerics,AsIs)
-importClassesFrom(AcidGenerics,DFrame)
+importClassesFrom(AcidGenerics,DataFrame)
 importFrom(AcidBase,requireNamespaces)
 importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
@@ -97,4 +97,4 @@ importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
-importFrom(pipette,as.DFrame)
+importFrom(pipette,as.DataFrame)
