--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AcidPlyr
 Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
-  classes, such as DFrame.
+  classes, such as DataFrame.
 Version: 0.1.23.9000
 Date: 2021-10-14
 Authors@R: c(
@@ -25,12 +25,12 @@ Depends: R (>= 4.0)
 Imports:
     AcidBase (>= 0.4.6),
     AcidCLI (>= 0.1.8),
-    AcidGenerics (>= 0.5.21),
+    AcidGenerics (>= 0.6.0),
     goalie (>= 0.6.0),
     methods,
     pipette (>= 0.8.0)
 Suggests:
-    AcidTest (>= 0.4.3),
+    AcidTest (>= 0.5.0),
     dplyr (>= 1.0.7),
     purrr (>= 0.3.4),
     testthat
