Update test data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ importFrom(AcidGenerics,"metadata<-")
 importFrom(AcidGenerics,DataFrame)
 importFrom(AcidGenerics,SimpleList)
 importFrom(AcidGenerics,antiJoin)
+importFrom(AcidGenerics,as.DataFrame)
 importFrom(AcidGenerics,as.data.frame)
 importFrom(AcidGenerics,cbind)
 importFrom(AcidGenerics,collapseToString)
@@ -97,4 +98,4 @@ importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
-importFrom(pipette,as.DataFrame)
+importMethodsFrom(pipette,as.DataFrame)
