--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
   classes, such as DataFrame.
 Version: 0.1.23.9000
-Date: 2021-10-14
+Date: 2021-12-06
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -21,7 +21,7 @@ URL:
 BugReports: https://github.com/acidgenomics/r-acidplyr/issues/
 License: AGPL-3
 Encoding: UTF-8
-Depends: R (>= 4.0)
+Depends: R (>= 4.1)
 Imports:
     AcidBase (>= 0.4.6),
     AcidCLI (>= 0.1.8),
@@ -30,10 +30,10 @@ Imports:
     methods,
     pipette (>= 0.8.0)
 Suggests:
-    AcidTest (>= 0.5.0),
+    AcidTest (>= 0.5.0.9000),
     dplyr (>= 1.0.7),
     purrr (>= 0.3.4),
-    testthat
+    testthat (>= 3.1.1)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Additional_repositories: https://r.acidgenomics.com
