--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,46 +35,46 @@ exportMethods(semiJoin)
 exportMethods(splitByLevel)
 exportMethods(transmuteAt)
 exportMethods(transmuteIf)
-importClassesFrom(AcidGenerics,AsIs)
-importClassesFrom(AcidGenerics,DataFrame)
+importClassesFrom(BiocGenerics,AsIs)
+importClassesFrom(S4Vectors,DataFrame)
 importFrom(AcidBase,requireNamespaces)
 importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
-importFrom(AcidGenerics,"metadata<-")
-importFrom(AcidGenerics,DataFrame)
-importFrom(AcidGenerics,SimpleList)
 importFrom(AcidGenerics,antiJoin)
 importFrom(AcidGenerics,as.DataFrame)
-importFrom(AcidGenerics,as.data.frame)
-importFrom(AcidGenerics,cbind)
 importFrom(AcidGenerics,collapseToString)
-importFrom(AcidGenerics,decode)
-importFrom(AcidGenerics,do.call)
-importFrom(AcidGenerics,expand.grid)
 importFrom(AcidGenerics,fullJoin)
 importFrom(AcidGenerics,innerJoin)
-importFrom(AcidGenerics,lapply)
 importFrom(AcidGenerics,leftJoin)
 importFrom(AcidGenerics,mapToDataFrame)
 importFrom(AcidGenerics,melt)
-importFrom(AcidGenerics,merge)
-importFrom(AcidGenerics,metadata)
 importFrom(AcidGenerics,mutateAll)
 importFrom(AcidGenerics,mutateAt)
 importFrom(AcidGenerics,mutateIf)
-importFrom(AcidGenerics,na.omit)
-importFrom(AcidGenerics,order)
-importFrom(AcidGenerics,rbind)
 importFrom(AcidGenerics,rbindToDataFrame)
 importFrom(AcidGenerics,rightJoin)
-importFrom(AcidGenerics,rowSums)
 importFrom(AcidGenerics,selectIf)
 importFrom(AcidGenerics,semiJoin)
-importFrom(AcidGenerics,setdiff)
 importFrom(AcidGenerics,splitByLevel)
 importFrom(AcidGenerics,transmuteAt)
 importFrom(AcidGenerics,transmuteIf)
-importFrom(AcidGenerics,unique)
+importFrom(BiocGenerics,as.data.frame)
+importFrom(BiocGenerics,cbind)
+importFrom(BiocGenerics,do.call)
+importFrom(BiocGenerics,lapply)
+importFrom(BiocGenerics,order)
+importFrom(BiocGenerics,rbind)
+importFrom(BiocGenerics,rowSums)
+importFrom(BiocGenerics,setdiff)
+importFrom(BiocGenerics,unique)
+importFrom(S4Vectors,"metadata<-")
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,SimpleList)
+importFrom(S4Vectors,decode)
+importFrom(S4Vectors,expand.grid)
+importFrom(S4Vectors,merge)
+importFrom(S4Vectors,metadata)
+importFrom(S4Vectors,na.omit)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
