--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidPlyr
 Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
   classes, such as DataFrame.
-Version: 0.1.23
-Date: 2022-01-19
+Version: 0.2.0.9000
+Date: 2022-02-04
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -23,9 +23,11 @@ License: AGPL-3
 Encoding: UTF-8
 Depends: R (>= 4.1)
 Imports:
-    AcidBase (>= 0.4.6),
+    AcidBase (>= 0.5.0),
     AcidCLI (>= 0.1.8),
     AcidGenerics (>= 0.6.0),
+    BiocGenerics,
+    S4Vectors,
     goalie (>= 0.6.0),
     methods,
     pipette (>= 0.8.0)
@@ -33,7 +35,7 @@ Suggests:
     AcidTest (>= 0.5.0),
     dplyr (>= 1.0.7),
     purrr (>= 0.3.4),
-    testthat (>= 3.1.1)
+    testthat (>= 3.1.2)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Additional_repositories: https://r.acidgenomics.com
