--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,11 +36,7 @@ exportMethods(transmuteAt)
 exportMethods(transmuteIf)
 importClassesFrom(BiocGenerics,AsIs)
 importClassesFrom(S4Vectors,DataFrame)
-importFrom(AcidBase,requireNamespaces)
-importFrom(AcidCLI,alert)
-importFrom(AcidCLI,alertInfo)
 importFrom(AcidGenerics,antiJoin)
-importFrom(AcidGenerics,as.DataFrame)
 importFrom(AcidGenerics,collapseToString)
 importFrom(AcidGenerics,fullJoin)
 importFrom(AcidGenerics,innerJoin)
@@ -87,6 +83,7 @@ importFrom(goalie,hasRownames)
 importFrom(goalie,isAny)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFlag)
+importFrom(goalie,isInstalled)
 importFrom(goalie,isInt)
 importFrom(goalie,isNumber)
 importFrom(goalie,isScalar)
@@ -97,4 +94,3 @@ importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
-importMethodsFrom(pipette,as.DataFrame)
