--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(BiocGenerics,unique)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
+importFrom(S4Vectors,complete.cases)
 importFrom(S4Vectors,decode)
 importFrom(S4Vectors,expand.grid)
 importFrom(S4Vectors,merge)
