Use requireNamespaces internally

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ importFrom(goalie,isScalar)
 importFrom(goalie,isScalarAtomic)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
+importFrom(goalie,requireNamespaces)
 importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,setMethod)
