--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,na.omit)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
+importFrom(goalie,areSameLength)
 importFrom(goalie,assert)
 importFrom(goalie,bapply)
 importFrom(goalie,hasColnames)
