Ensure we don't nest down an extra level

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ importFrom(BiocGenerics,rbind)
 importFrom(BiocGenerics,rowSums)
 importFrom(BiocGenerics,setdiff)
 importFrom(BiocGenerics,unique)
+importFrom(BiocGenerics,unlist)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
