--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,5 +89,6 @@ importFrom(goalie,isSubset)
 importFrom(goalie,requireNamespaces)
 importFrom(methods,as)
 importFrom(methods,is)
+importFrom(methods,new)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
