--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,7 @@ exportMethods(semiJoin)
 exportMethods(splitByLevel)
 exportMethods(transmuteAt)
 exportMethods(transmuteIf)
-importClassesFrom(S4Vectors,DataFrame)
+importClassesFrom(S4Vectors,DFrame)
 importFrom(AcidGenerics,antiJoin)
 importFrom(AcidGenerics,cast)
 importFrom(AcidGenerics,collapseToString)
