--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: AcidPlyr
 Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
-  classes, such as DataFrame.
-Version: 0.3.8
-Date: 2023-04-25
+  classes, such as DFrame.
+Version: 0.3.9
+Date: 2023-04-26
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -23,17 +23,17 @@ License: AGPL-3
 Encoding: UTF-8
 Depends: R (>= 4.2)
 Imports:
-    AcidGenerics (>= 0.6.6),
+    AcidGenerics (>= 0.6.7),
     BiocGenerics (>= 0.44.0),
     S4Vectors (>= 0.36.0),
-    goalie (>= 0.6.8),
+    goalie (>= 0.6.9),
     methods
 Suggests:
     AcidCLI (>= 0.2.7),
-    AcidTest (>= 0.7.0),
+    AcidTest (>= 0.7.2),
     IRanges (>= 2.32.0),
-    pipette (>= 0.10.4),
-    testthat (>= 3.1.6),
+    pipette (>= 0.10.9),
+    testthat (>= 3.1.7),
     tidyr (>= 1.3.0)
 Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
