--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidPlyr
 Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
   classes, such as DFrame.
-Version: 0.3.9
-Date: 2023-04-26
+Version: 0.3.10
+Date: 2023-04-27
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -32,6 +32,7 @@ Suggests:
     AcidCLI (>= 0.2.7),
     AcidTest (>= 0.7.2),
     IRanges (>= 2.32.0),
+    Matrix (>= 1.5.4),
     pipette (>= 0.10.9),
     testthat (>= 3.1.7),
     tidyr (>= 1.3.0)
