--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,5 +38,6 @@ Suggests:
     tidyr (>= 1.3.0)
 Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
+Config/testthat/parallel: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
