Work on adding support for unnest2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(semiJoin)
 export(splitByLevel)
 export(transmuteAt)
 export(transmuteIf)
+export(unnest2)
 exportMethods(antiJoin)
 exportMethods(cast)
 exportMethods(collapseToString)
@@ -34,6 +35,7 @@ exportMethods(semiJoin)
 exportMethods(splitByLevel)
 exportMethods(transmuteAt)
 exportMethods(transmuteIf)
+exportMethods(unnest2)
 importClassesFrom(S4Vectors,DFrame)
 importFrom(AcidGenerics,antiJoin)
 importFrom(AcidGenerics,cast)
@@ -52,6 +54,7 @@ importFrom(AcidGenerics,semiJoin)
 importFrom(AcidGenerics,splitByLevel)
 importFrom(AcidGenerics,transmuteAt)
 importFrom(AcidGenerics,transmuteIf)
+importFrom(AcidGenerics,unnest2)
 importFrom(BiocGenerics,as.data.frame)
 importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,do.call)
