Pure base R support for unnest2, not requiring tidyr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,do.call)
 importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,order)
+importFrom(BiocGenerics,rbind)
 importFrom(BiocGenerics,setdiff)
 importFrom(BiocGenerics,unique)
 importFrom(BiocGenerics,unlist)
@@ -71,6 +72,7 @@ importFrom(S4Vectors,expand.grid)
 importFrom(S4Vectors,merge)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,na.omit)
+importFrom(S4Vectors,split)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
@@ -80,6 +82,7 @@ importFrom(goalie,hasDims)
 importFrom(goalie,hasLength)
 importFrom(goalie,hasNoDuplicates)
 importFrom(goalie,hasRownames)
+importFrom(goalie,hasRows)
 importFrom(goalie,isAny)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFlag)
