--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,8 +34,7 @@ Suggests:
     IRanges (>= 2.34.0),
     Matrix (>= 1.6.1),
     pipette (>= 0.11.2),
-    testthat (>= 3.1.10),
-    tidyr (>= 1.3.0)
+    testthat (>= 3.1.10)
 Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
 Config/testthat/parallel: true
