Perform unlist operation in parallel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,3 +98,4 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
+importFrom(parallel,mclapply)
