--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     BiocGenerics (>= 0.46.0),
     S4Vectors (>= 0.38.0),
     goalie (>= 0.6.14),
-    methods
+    methods,
+    parallel
 Suggests:
     AcidCLI (>= 0.2.8),
     AcidTest (>= 0.7.2),
