Import IRanges for DFrameList

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ exportMethods(splitByLevel)
 exportMethods(transmuteAt)
 exportMethods(transmuteIf)
 exportMethods(unnest2)
+importClassesFrom(IRanges,DFrameList)
 importClassesFrom(S4Vectors,DFrame)
 importFrom(AcidGenerics,antiJoin)
 importFrom(AcidGenerics,cast)
