Allow user to change the nameCol and rownameCol

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(semiJoin)
 export(splitByLevel)
 export(transmuteAt)
 export(transmuteIf)
+export(unlist2)
 export(unnest2)
 exportMethods(antiJoin)
 exportMethods(cast)
@@ -35,6 +36,7 @@ exportMethods(semiJoin)
 exportMethods(splitByLevel)
 exportMethods(transmuteAt)
 exportMethods(transmuteIf)
+exportMethods(unlist2)
 exportMethods(unnest2)
 importClassesFrom(IRanges,DFrameList)
 importClassesFrom(S4Vectors,DFrame)
@@ -55,6 +57,7 @@ importFrom(AcidGenerics,semiJoin)
 importFrom(AcidGenerics,splitByLevel)
 importFrom(AcidGenerics,transmuteAt)
 importFrom(AcidGenerics,transmuteIf)
+importFrom(AcidGenerics,unlist2)
 importFrom(AcidGenerics,unnest2)
 importFrom(BiocGenerics,as.data.frame)
 importFrom(BiocGenerics,cbind)
@@ -81,6 +84,7 @@ importFrom(goalie,bapply)
 importFrom(goalie,hasColnames)
 importFrom(goalie,hasDims)
 importFrom(goalie,hasLength)
+importFrom(goalie,hasNames)
 importFrom(goalie,hasNoDuplicates)
 importFrom(goalie,hasRownames)
 importFrom(goalie,hasRows)
