Work toward initial stable version of unlist2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,split)
 importFrom(goalie,allAreAtomic)
+importFrom(goalie,allAreMatchingRegex)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
 importFrom(goalie,bapply)
