Initial commit of filterNested

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(antiJoin)
 export(cast)
 export(collapseToString)
+export(filterNested)
 export(fullJoin)
 export(innerJoin)
 export(leftJoin)
@@ -22,6 +23,7 @@ export(unnest2)
 exportMethods(antiJoin)
 exportMethods(cast)
 exportMethods(collapseToString)
+exportMethods(filterNested)
 exportMethods(fullJoin)
 exportMethods(innerJoin)
 exportMethods(leftJoin)
@@ -43,6 +45,7 @@ importClassesFrom(S4Vectors,DFrame)
 importFrom(AcidGenerics,antiJoin)
 importFrom(AcidGenerics,cast)
 importFrom(AcidGenerics,collapseToString)
+importFrom(AcidGenerics,filterNested)
 importFrom(AcidGenerics,fullJoin)
 importFrom(AcidGenerics,innerJoin)
 importFrom(AcidGenerics,leftJoin)
@@ -62,12 +65,14 @@ importFrom(AcidGenerics,unnest2)
 importFrom(BiocGenerics,as.data.frame)
 importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,do.call)
+importFrom(BiocGenerics,grepl)
 importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,order)
 importFrom(BiocGenerics,rbind)
 importFrom(BiocGenerics,setdiff)
 importFrom(BiocGenerics,unique)
 importFrom(BiocGenerics,unlist)
+importFrom(IRanges,CharacterList)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,complete.cases)
