--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidPlyr
 Title: Acid Genomics Rectangular Data Plyr
 Description: A dplyr-like grammar for manipulation of S4 rectangular data
   classes, such as DFrame.
-Version: 0.5.4
-Date: 2024-03-18
+Version: 0.5.5
+Date: 2024-03-24
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -21,23 +21,23 @@ URL:
 BugReports: https://github.com/acidgenomics/r-acidplyr/issues/
 License: AGPL-3
 Encoding: UTF-8
-Depends: R (>= 4.3)
+Depends: R (>= 4.0)
 Imports:
-    AcidGenerics (>= 0.7.6),
-    BiocGenerics (>= 0.48.0),
-    IRanges (>= 2.36.0),
-    S4Vectors (>= 0.40.0),
-    goalie (>= 0.7.7),
+    AcidGenerics,
+    BiocGenerics,
+    IRanges,
+    S4Vectors,
+    goalie,
     methods,
     parallel
 Suggests:
-    AcidCLI (>= 0.3.0),
-    AcidTest (>= 0.9.0),
-    Matrix (>= 1.6.4),
-    pipette (>= 0.15.2),
-    testthat (>= 3.2.1)
+    AcidCLI,
+    AcidTest,
+    Matrix,
+    pipette,
+    testthat
 Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
